--- a/audio_opensles/nord_audio_opensles.vcxproj.filters
+++ b/audio_opensles/nord_audio_opensles.vcxproj.filters
@@ -9,48 +9,48 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="audio_mmsystem_command.h">
+    <ClInclude Include="_.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="audio_opensles.h">
+    <ClInclude Include="_audio_opensles.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="audio_opensles_command.h">
+    <ClInclude Include="_factory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="audio_opensles_factory_exchange.h">
+    <ClInclude Include="translation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="audio_opensles_translation.h">
+    <ClInclude Include="in.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="audio_opensles_wave_in.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="audio_opensles_wave_out.h">
+    <ClInclude Include="out.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="framework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="audio_opensles_engine.h">
+    <ClInclude Include="engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="audio_opensles_factory_exchange.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="audio_opensles_translation.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="audio_opensles_wave_out.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="framework.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="audio_opensles_engine.cpp">
+    <ClCompile Include="engine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="_factory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="translation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="in.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="out.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
